# lbreakouthd

./: CROSSCOMPILE  ChangeLog  Changelog  EMSCRIPTEN.md  INSTALL  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.ac  funcs.txt  lbreakouthd.desktop
libgame/: Makefile.am  Makefile.in  balls.c  balls.h  bricks.c  bricks.h  extras.c  extras.h  game.c  game.h  gamedefs.h  levels.c  levels.h  list.c  list.h  mathfuncs.c  mathfuncs.h  paddle.c  paddle.h  shots.c  shots.h  tools.c  tools.h
m4/: ChangeLog
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  de.gmo  de.po  es.po  fr.gmo  fr.po  lbreakouthd.pot  ru.po  sv.gmo  sv.po
src/: Makefile.am  Makefile.in  clientgame.cpp  clientgame.h  config.cpp  config.h  editor.cpp  editor.h  hiscores.cpp  hiscores.h  main.cpp  menu.cpp  menu.h  mixer.h  sdl.cpp  sdl.h  selectdlg.cpp  selectdlg.h  sprite.cpp  sprite.h  theme.cpp  theme.h  tools.cpp  tools.h  view.cpp  view.h
src/levels/: JustGoForIt  Makefile.am  Makefile.in
src/themes/: Makefile.am  Makefile.in
src/themes/Standard/: Makefile.am  Makefile.in  extras.xcf
